--- a/index.html
+++ b/index.html
@@ -5,96 +5,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - Miss Ratiros Thoshe</title>
     <style>
+        /* Body Style */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #078a16;
+            background: linear-gradient(135deg, #ffcccb, #ffe4e1, #f5f5f5);
             color: #333;
         }
-        .profile-container {
-            max-width: 700px;
-            margin: 50px auto;
-            background-color: #f7f7f7;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+        /* Container Style */
+        .container {
+            max-width: 900px;
+            margin: 30px auto;
             padding: 20px;
-            text-align: center;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+            border: 3px solid #ff7f50;
         }
-        .profile-container img {
+
+        /* Section Style */
+        .section {
+            border: 2px solid #ffa07a;
+            border-radius: 15px;
+            padding: 20px;
+            margin-bottom: 20px;
+            background-color: #fff0f5;
+        }
+
+        .section h2 {
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            color: #ff4500;
+            text-shadow: 1px 1px 1px #ffc1c1;
+        }
+
+        /* Profile Header Style */
+        .profile-header {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #333;
+        }
+
+        .profile-header img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            border: 4px solid #ffcccb;
+            border: 5px solid #ff4500;
             margin-bottom: 20px;
         }
-        h1 {
-            color: #ff7f50;
+
+        .profile-header h1 {
             font-size: 2.2em;
+            color: #ff4500;
+            text-shadow: 2px 2px 4px #ffe4e1;
         }
-        h3 {
-            margin: 10px 0;
+
+        .profile-header h3 {
+            margin: 5px 0;
             color: #666;
         }
-        .emoji {
-            font-size: 1.5em;
-        }
+
+        /* List Style */
         ul {
             list-style: none;
             padding: 0;
         }
+
         li {
             margin: 5px 0;
         }
+
         a {
-            color: #007bff;
+            color: #ff6347;
             text-decoration: none;
+            font-weight: bold;
         }
+
         a:hover {
             text-decoration: underline;
         }
+
+        /* Footer Style */
         .footer {
-            margin-top: 20px;
+            text-align: center;
             font-size: 0.9em;
-            color: #aaa;
+            color: #999;
+            margin-top: 20px;
+            border-top: 2px dashed #ffa07a;
+            padding-top: 15px;
+        }
+
+        /* Hover Animation for Cards */
+        .section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 20px rgba(255, 99, 71, 0.4);
+            transition: all 0.3s ease-in-out;
         }
     </style>
 </head>
 <body>
-    <div class="profile-container">
-        <img src="https://www.lannapoly.ac.th/online/Stu_picture/67319010114.jpg" alt="Profile Picture">
-        <h1>Miss. Ratiros Thoshe</h1>
-        <h3 class="emoji">🌼 Miss WaWa 🌻</h3>
-        <h3>Lannapoly Chiang Mai College 🌷</h3>
-        <h3>Age: 19 🤞</h3>
-        
-        <h2>Contact Information 📞</h2>
-        <ul>
-            <li>Email: <a href="mailto:wawa@example.com">wawa@example.com</a></li>
-            <li>Phone: 081-234-5678</li>
-            <li>Facebook: <a href="https://facebook.com/wawa" target="_blank">facebook.com/wawa</a></li>
-            <li>Instagram: <a href="https://instagram.com/wawa" target="_blank">@wawa</a></li>
-        </ul>
+    <div class="container">
+        <!-- Profile Header -->
+        <div class="profile-header">
+            <img src="https://via.placeholder.com/150" alt="Profile Picture">
+            <h1>Miss. Ratiros Thoshe</h1>
+            <h3>🌼 Miss WaWa 🌻</h3>
+            <h3>Lannapoly Chiang Mai College 🌷</h3>
+            <h3>Age: 19 🤞</h3>
+            <h3>I love cats! 🐱🍕🍔🍟</h3>
+        </div>
 
-        <h2>Hobbies and Interests 🌟</h2>
-        <ul>
-            <li>Watching movies 🎬</li>
-            <li>Reading novels 📚</li>
-            <li>Cooking delicious food 🍳</li>
-            <li>Exploring nature 🌿</li>
-        </ul>
+        <!-- Contact Information -->
+        <div class="section">
+            <h2>Contact Information 📞</h2>
+            <ul>
+                <li>Email: <a href="mailto:wawa@example.com">wawa@example.com</a></li>
+                <li>Phone: 081-234-5678</li>
+                <li>Facebook: <a href="https://facebook.com/wawa" target="_blank">facebook.com/wawa</a></li>
+                <li>Instagram: <a href="https://instagram.com/wawa" target="_blank">@wawa</a></li>
+            </ul>
+        </div>
 
-        <h2>Skills 💡</h2>
-        <ul>
-            <li>Proficient in Microsoft Office</li>
-            <li>Basic web design (HTML, CSS)</li>
-            <li>Photography 📸</li>
-            <li>Fluent in Thai and English 🇹🇭🇬🇧</li>
-        </ul>
+        <!-- Hobbies and Interests -->
+        <div class="section">
+            <h2>Hobbies and Interests 🌟</h2>
+            <ul>
+                <li>Watching movies 🎬</li>
+                <li>Reading novels 📚</li>
+                <li>Cooking delicious food 🍳</li>
+                <li>Exploring nature 🌿</li>
+            </ul>
+        </div>
 
-        <h2>Motto ✨</h2>
-        <p>"Be yourself; everyone else is already taken."</p>
+        <!-- Skills -->
+        <div class="section">
+            <h2>Skills 💡</h2>
+            <ul>
+                <li>Proficient in Microsoft Office</li>
+                <li>Basic web design (HTML, CSS)</li>
+                <li>Photography 📸</li>
+                <li>Fluent in Thai and English 🇹🇭🇬🇧</li>
+            </ul>
+        </div>
 
+        <!-- Motto -->
+        <div class="section">
+            <h2>Motto ✨</h2>
+            <p>"Be yourself; everyone else is already taken." - Oscar Wilde</p>
+        </div>
+
+        <!-- Footer -->
         <div class="footer">
             <p>© 2024 Profile of Miss Ratiros Thoshe</p>
         </div>
