--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="container">
         <!-- Profile Header -->
         <div class="profile-header">
-            <img src="https://via.placeholder.com/150" alt="Profile Picture">
+            <img src="https://www.lannapoly.ac.th/online/Stu_picture/67319010114.jpg" alt="Profile Picture">
             <h1>Miss. Ratiros Thoshe</h1>
             <h3>🌼 Miss WaWa 🌻</h3>
             <h3>Lannapoly Chiang Mai College 🌷</h3>
