--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
         <div class="profile-header">
             <img src="https://www.lannapoly.ac.th/online/Stu_picture/67319010114.jpg" alt="Profile Picture">
             <h1>Miss. Ratiros Thoshe</h1>
-            <h3>🌼 Miss WaWa 🌻</h3>
+            <h3>🌼 Nickname WaWa 🌻</h3>
+             <h3>Age: 19 🤞</h3>
             <h3>Lannapoly Chiang Mai College 🌷</h3>
-            <h3>Age: 19 🤞</h3>
-            <h3>I love cats! 🐱🍕🍔🍟</h3>
         </div>
 
         <!-- Contact Information -->
